methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                             ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                        ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                                                                                                                          ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                                                                                                                                     ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                                                                                                                                                                  ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                                                                                                                                                                               ^FlowerPot:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def growFlowers() {def makeFlower(c:Color): {forward(); left(); for (i<1 to 4) {setBrushColor(c); right(); brushDown(); BrushUp(); forward(); left(); forward(); left()}; forward(); setBrushColor(Color.YELLOW); brushDown(); brushUp(); backward()}
                                                                                                                                                                                                                                          ^